--- a/contacto/index.html
+++ b/contacto/index.html
@@ -57,7 +57,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand d-flex align-items-center" href="../">
+            <a class="navbar-brand d-flex" href="../">
                 <img id="logoImg" src="../img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -80,7 +80,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3"
-                            href="./contacto.html">Contacto</a>
+                            href="./">Contacto</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center ms-md-3">
