--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand d-flex align-items-center" href="./">
+            <a class="navbar-brand d-flex" href="./">
                 <img id="logoImg" src="img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -148,7 +148,7 @@
                 <p class="text-white" style="text-align: justify;" data-aos="fade-up" data-aos-delay="100"
                     data-aos-duration="1000" data-aos-once="true">Trivium Records es una empresa dedicada a la
                     producción, enseñanza y representación musical en todos los aspectos. Tiene como objetivo brindar
-                    servicios y productos de calidad a quienes quieren llevar sus producciones, su nivel música a su
+                    servicios y productos de calidad a quienes quieren llevar sus producciones, su nivel musical a su
                     carrera profesional a nuevos horizontes</p>
                 <div class="row py-4 justify-content-center text-center">
                     <div class="col-sm-3 text-center mb-4 px-2" data-aos="fade-up" data-aos-delay="300"
@@ -245,21 +245,6 @@
     </div>
     <!-- Services End -->
 
-
-    <!-- Subscribe Start -->
-    <!-- <div class="container-fluid bg-primary my-5 py-5 text-center">
-        <h1 class="text-white font-weight-bold mt-5 mb-3">Subscribe Our Newsletter</h1>
-        <p class="text-white mb-4">Subscribe and get Our latest article in your inbox</p>
-        <form class="form-inline justify-content-center mb-5">
-            <div class="input-group">
-                <input type="text" class="form-control-lg" placeholder="Your Email">
-                <div class="input-group-append">
-                    <button class="btn btn-secondary" type="submit">Subscribe</button>
-                </div>
-            </div>
-        </form>
-    </div> -->
-    <!-- Subscribe End -->
 
     <!-- Facts Start -->
     <div class="container-fluid my-5 py-5 text-center" style="background: #f2af13;">
