--- a/servicios/academia/index.html
+++ b/servicios/academia/index.html
@@ -60,7 +60,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand d-flex align-items-center" href="../">
+            <a class="navbar-brand d-flex" href="../..">
                 <img id="logoImg" src="../../img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -81,8 +81,8 @@
                             <a class="nav-link text-white fw-medium text-center m-3" href="../../">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white fw-medium text-center active m-3"
-                                href="../.././#servicios">Servicios</a>
+                        <a class="nav-link text-white fw-medium text-center active m-3"
+                            href="../../#servicios">Servicios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white fw-medium text-center m-3" href="../../contacto/">Contacto</a>
@@ -181,7 +181,7 @@
         <div class="row align-items-center mb-5 py-5 px-3">
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1" data-aos="fade-up" data-aos-delay="100"
                 data-aos-duration="1000">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_basi.webp" alt="Nivel Básico">
+                <img width="60%" class="img-fluid img-academia" src="../../img/acade_canto_basi.webp" alt="Nivel Básico">
             </div>
             <div class="col-lg-6 py-5 py-lg-0 px-4 px-lg-5 order-2" data-aos="fade-up" data-aos-delay="200"
                 data-aos-duration="1000">
@@ -231,7 +231,7 @@
             </div>
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1 order-lg-2" data-aos="fade-up"
                 data-aos-delay="200" data-aos-duration="1000">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_inter.webp" alt="Nivel Intermedio">
+                <img width="60%" class="img-fluid img-academia" src="../../img/acade_canto_inter.webp" alt="Nivel Intermedio">
             </div>
         </div>
 
@@ -239,7 +239,7 @@
         <div class="row align-items-center mb-5 py-5 px-3">
             <div class="col-lg-6 px-0 d-flex justify-content-center order-1" data-aos="fade-up" data-aos-delay="100"
                 data-aos-duration="1000">
-                <img width="60%" class="img-fluid" src="../../img/acade_canto_avan.webp" alt="Nivel Avanzado">
+                <img width="60%" class="img-fluid img-academia" src="../../img/acade_canto_avan.webp" alt="Nivel Avanzado">
             </div>
             <div class="col-lg-6 py-5 py-lg-0 px-4 px-lg-5 order-2" data-aos="fade-up" data-aos-delay="200"
                 data-aos-duration="1000">
@@ -265,9 +265,6 @@
         </div>
 
     </div>
-
-
-
     <!-- Canto Avanzado End -->
 
 
