--- a/servicios/producciones/artistas/index.html
+++ b/servicios/producciones/artistas/index.html
@@ -60,7 +60,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand d-flex align-items-center" href="../../">
+            <a class="navbar-brand d-flex" href="../../">
                 <img id="logoImg" src="../../../img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -80,7 +80,7 @@
                     </li> -->
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3"
-                            href="../../.././#servicios">Servicios</a>
+                            href="../../../#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="../../../contacto/">Contacto</a>
@@ -168,11 +168,11 @@
     <!-- Facts End -->
 
 
-    <!-- Zona prueba Start-->
+    <!-- Artistas Start-->
     <!-- 1 -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
-            <h2 class="text-white mb-3 display-4">Trivium Sanctus</h2>
+            <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Sanctus</span></h2>
             <h3 class="text-white mb-3">Música para misa</h3>
             <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
                 caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
@@ -204,6 +204,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$21,400</p>
                     </div>
                 </div>
             </div>
@@ -233,6 +234,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$12,500</p>
                     </div>
                 </div>
             </div>
@@ -259,10 +261,11 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$10,200</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000"
                 data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
@@ -285,10 +288,11 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$6,800</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000"
                 data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
@@ -311,6 +315,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$6,150</p>
                     </div>
                 </div>
             </div>
@@ -321,7 +326,7 @@
     <!-- 2 -->
     <div class="container pt-5">
         <div class="d-flex flex-column text-center mb-5">
-            <h2 class="text-white mb-3 display-4">Trivium Cocktail</h2>
+            <h2 class="text-white mb-3 display-4">Trivium <span style="color: #f2af13;">Cocktail</span></h2>
             <h3 class="text-white mb-3">Música para cena</h3>
             <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
                 caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
@@ -353,6 +358,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$12,500</p>
                     </div>
                 </div>
             </div>
@@ -382,6 +388,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$8,000</p>
                     </div>
                 </div>
             </div>
@@ -408,10 +415,11 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$6,000</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000"
                 data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
@@ -434,10 +442,11 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$4,000</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
+            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000"
                 data-aos-once="true">
                 <div class="custom-card-service">
                     <div class="custom-card-img-wrapper">
@@ -461,6 +470,7 @@
                                 WhatsApp
                             </a>
                         </div>
+                        <p class="text-center text-white m-3">$2,500</p>
                     </div>
                 </div>
             </div>
@@ -468,162 +478,7 @@
     </div>
 
 
-    <!-- Zona prueba End -->
-
-    <!-- Party pack Start -->
-    <!-- <div class="container pt-5">
-        <div class="d-flex flex-column text-center mb-5">
-            <h2 class="text-white mb-3 display-4">Paquetes de Artistas</h2>
-            <p class="text-white" style="font-size: .9rem;">"Ninguno de los paquetes incluye viáticos ni hospedaje. En
-                caso de ser necesario, estos serán cubiertos por el cliente. Se aplicarán cargos adicionales por cada
-                hora excedida."</p>
-        </div>
-        <div class="row pb-3 justify-content-center">
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000"
-                data-aos-once="true">
-                <div class="custom-card-service">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="../../../img/pack_music_1.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-3">Cantante Solista</h4>
-                        </div>
-                        <ul>
-                            <li>1 Bocina Polar</li>
-                            <li>1 Micrófono inalámbrico</li>
-                            <li>1 Mezcladora 4 canales</li>
-                            <li>1 Cantante (Bel Canto/Popular)</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%201"
-                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                                rel="noopener">
-                                <i class="fab fa-whatsapp fa-lg m-2"></i>
-                                WhatsApp
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000"
-                data-aos-once="true">
-                <div class="custom-card-service">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="../../../img/pack_music_2.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-3">Cantante con Pianista</h4>
-                        </div>
-                        <ul>
-                            <li>1 Bocina Polar</li>
-                            <li>1 Micrófono Inalámbrico</li>
-                            <li>1 Mezcladora 4 Canales</li>
-                            <li>1 Piano Digital Yamaha P-45</li>
-                            <li>1 Cantante</li>
-                            <li>1 Pianista</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%202"
-                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                                rel="noopener">
-                                <i class="fab fa-whatsapp fa-lg m-2"></i>
-                                WhatsApp
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
-                data-aos-once="true">
-                <div class="custom-card-service">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="../../../img/pack_music_3.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-3">Dueto</h4>
-                        </div>
-                        <ul>
-                            <li>1 Bocina Polar</li>
-                            <li>2 Micrófonos Inalámbricos</li>
-                            <li>1 Mezcladora 4 Canales</li>
-                            <li>1 Piano Digital Yamaha P-45</li>
-                            <li>2 Cantantes</li>
-                            <li>1 Pianista</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%203"
-                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                                rel="noopener">
-                                <i class="fab fa-whatsapp fa-lg m-2"></i>
-                                WhatsApp
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
-                data-aos-once="true">
-                <div class="custom-card-service">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="../../../img/pack_music_4.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-3">Ensamble Vocal</h4>
-                        </div>
-                        <ul>
-                            <li>2 Bocinas Polares</li>
-                            <li>4 Micrófonos Inalámbricos</li>
-                            <li>1 Mezcladora 6 Canales</li>
-                            <li>1 Piano Digital Yamaha P-45</li>
-                            <li>4 Cantantes</li>
-                            <li>1 Pianista</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%203"
-                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                                rel="noopener">
-                                <i class="fab fa-whatsapp fa-lg m-2"></i>
-                                WhatsApp
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000"
-                data-aos-once="true">
-                <div class="custom-card-service">
-                    <div class="custom-card-img-wrapper">
-                        <img class="custom-card-img" src="../../../img/pack_music_5.webp" alt="">
-                    </div>
-                    <div class="custom-card-content">
-                        <div class="d-flex justify-content-center align-items-center mb-2">
-                            <h4 class="card-title text-white text-truncate m-3">Producción Especial a tu medida</h4>
-                        </div>
-                        <ul>
-                            <li>Ensamble de cuerdas</li>
-                            <li>Coro completo</li>
-                            <li>Orquesta</li>
-                            <li>Big Band</li>
-                            <li>Bandas populares</li>
-                        </ul>
-                        <div class="d-flex justify-content-center">
-                            <a href="https://wa.me/524731370884?text=Hola%2C%20quiero%20informes%20sobre%20el%20Party%20Pack%203"
-                                class="boton mt-4 px-4 d-flex align-items-center justify-content-center" target="_blank"
-                                rel="noopener">
-                                <i class="fab fa-whatsapp fa-lg m-2"></i>
-                                WhatsApp
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Party Pack End -->
+    <!-- Artista End -->
 
 
     <!-- Footer Start -->
