--- a/servicios/producciones/index.html
+++ b/servicios/producciones/index.html
@@ -60,7 +60,7 @@
     <nav id="mainNavbar" class="navbar navbar-expand-md navbar-light fixed-top bg-transparent shadow-sm transition-bg">
         <div class="container">
             <!-- Logo a la izquierda -->
-            <a class="navbar-brand d-flex align-items-center" href="../">
+            <a class="navbar-brand d-flex" href="../">
                 <img id="logoImg" src="../../img/logo_s.webp" alt="Logo" style="height:75px; transition:all .3s;">
                 <span class="ms-2 alumni-font fw-bold fs-4" id="logoText"></span>
             </a>
@@ -80,7 +80,7 @@
                     </li> -->
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center active m-3"
-                            href="../.././#servicios">Servicios</a>
+                            href="../../#servicios">Servicios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-medium text-center m-3" href="../../contacto/">Contacto</a>
@@ -153,7 +153,7 @@
                     y backline para shows en vivo.
                     Contamos con equipos de última generación y personal técnico especializado para crear experiencias
                     memorables en León, Querétaro y todo el Bajío.</p>
-                <a href="/servicios/producciones/eventos/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="eventos/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
         </div>
@@ -179,7 +179,7 @@
                     graduaciones y bodas—en una experiencia vibrante, con música seleccionada para cada estilo y
                     momento.
                 </p>
-                <a href="/servicios/producciones/artistas/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
+                <a href="artistas/" class="btn-enviar text-light mt-4 px-4 d-flex align-items-center justify-content-center"
                     data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000" data-aos-once="true">Ver Más</a>
             </div>
             <div class="col-lg-6 px-0 order-1 order-lg-2 d-flex justify-content-end">
@@ -188,76 +188,6 @@
         </div>
     </div>
     <!-- About End -->
-
-
-    <!-- Testimonial Start -->
-    <!-- <div class="container-fluid p-0">
-        <div class="container p-0 py-5">
-            <div class="d-flex flex-column text-center mb-5">
-                <h5 class="text-primary mb-3">Testimonial</h5>
-                <h1 class="m-0">What Our Clients Say</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel">
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem.
-                        Dolores tempor voluptua ipsum sanctus clita
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <img class="img-thumbnail bg-light rounded-circle" src="img/testimonial-1.jpg"
-                            style="width: 80px; height: 80px; padding: 12px;" alt="Image">
-                        <div class="pl-4">
-                            <h6 class="text-primary">Client Name</h6>
-                            <p class="m-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem.
-                        Dolores tempor voluptua ipsum sanctus clita
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <img class="img-thumbnail bg-light rounded-circle" src="img/testimonial-2.jpg"
-                            style="width: 80px; height: 80px; padding: 12px;" alt="Image">
-                        <div class="pl-4">
-                            <h6 class="text-primary">Client Name</h6>
-                            <p class="m-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem.
-                        Dolores tempor voluptua ipsum sanctus clita
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <img class="img-thumbnail bg-light rounded-circle" src="img/testimonial-3.jpg"
-                            style="width: 80px; height: 80px; padding: 12px;" alt="Image">
-                        <div class="pl-4">
-                            <h6 class="text-primary">Client Name</h6>
-                            <p class="m-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-item px-3">
-                    <div class="testimonial-text position-relative border bg-light mb-4 py-3 px-4">
-                        Sed ea amet kasd elitr stet nonumy, stet rebum et ipsum est duo elitr eirmod clita lorem.
-                        Dolores tempor voluptua ipsum sanctus clita
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <img class="img-thumbnail bg-light rounded-circle" src="img/testimonial-4.jpg"
-                            style="width: 80px; height: 80px; padding: 12px;" alt="Image">
-                        <div class="pl-4">
-                            <h6 class="text-primary">Client Name</h6>
-                            <p class="m-0">Profession</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Testimonial End -->
 
 
     <!-- Footer Start -->
@@ -328,27 +258,8 @@
             <div class="col-md-12 text-center text-md-left mb-3 mb-md-0">
                 <p class="m-0 text-white">
                     &copy; <a class="text-white font-weight-bold" href="#">Trivium Records</a>. Derechos Reservados.
-
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    <!-- Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">HTML Codex</a> -->
                 </p>
             </div>
-            <!-- <div class="col-md-6 text-center text-md-right">
-                <ul class="nav d-inline-flex">
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Privacy</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Terms</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white py-0" href="#">Help</a>
-                    </li>
-                </ul>
-            </div> -->
         </div>
     </div>
     <!-- Footer End -->
